--- a/languages/fr.json
+++ b/languages/fr.json
@@ -3,7 +3,7 @@
     "settings": {
       "display-board-name": "Active le \"board\" Miro",
       "display-board-hint": "Affiche le \"board\" Miro directement dans Foundry VTT.",
-      "board-id-name": "ID du \"board\" Miro (requis)",
+      "board-id-name": "ID du \"board\" Miro (minimum requis)",
       "board-id-hint": "Vous pouvez trouver l'identifiant du \"board\" miro dans sont URL : https://miro.com/app/board/IDENTIFIANT/.",
       "access-token-name": "Token d'accès Miro (nécessaire pour l'utilisation de l'API de Miro et envoyer des données au \"board\")",
       "access-token-hint": "Vous pouvez trouver ce token en créant un application sur Miro. Générerez un token d'accès sans limite de temps.",
@@ -11,6 +11,9 @@
       "cors-proxy-url-hint": "Obligatoire pour éviter les problèmes de CORS avec l'API Miro et le navigateur. Toutes les requêtes seront envoyées à travers le proxy cette manière : https://cors-proxy-url/https://miro-api-url/ (le proxy CORS doit être sécurisé en HTTPS).",
       "player-api-access-name": "Options de déversement accessibles aux joueurs",
       "player-api-access-hint": "Si activé, les joueurs ont également accès aux fonctionnalités de déversement de contenu vers Miro."
+    },
+    "layer": {
+      "gm-needed": "Un maître de jeu doit d'abord se connecter pour créer la scène du \"board\" Miro (obligatoire une seule fois)."
     },
     "api": {
       "unsupported-file-type": "Ce type de fichier n'est pas supporté. Le fichier ne sera pas déversé sur Miro.",
